<resources>
    <string name="title_home">Home</string>

    <string name="app_name">ETS</string>
    <string name="title_transaction">Transactions</string>
    <string name="title_overview">Overview</string>
    <string name="title_budget">Budget</string>
    <string name="title_settings">Settings</string>
    <string name="title_add">Add New</string>
    <string-array name="categories">
        <item>Food and Dining</item>
        <item>Rents</item>
        <item>Auto and Transport</item>
        <item>Shopping</item>
        <item>Bills and Utilities</item>
        <item>Business Services</item>
        <item>Health and Fitness</item>
    </string-array>
</resources>
